# axum-tg-bot

./: .gitignore  Cargo.toml  README.md  env-example
src/: config.rs  err.rs  lib.rs
src/types/: bot.rs  chat.rs  message.rs  mod.rs  response.rs  text_message.rs  update.rs  user.rs
tests/: bot.rs
